--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,8 +21,10 @@ function(add_task contest name)
 endfunction()
 
 add_task(2 b)
+
 add_task(3 a)
 add_task(3 b)
+add_task(3 d)
 add_task(3 e)
 
 # set(CPACK_PROJECT_NAME ${PROJECT_NAME})
