--- a/contest3/d/CMakeLists.txt
+++ b/contest3/d/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_catch(test_contest3_d test.cpp)
+target_compile_definitions(test_contest3_d PUBLIC -DLOCAL)
 
 add_executable(contest3_d answer.cpp)
-target_compile_definitions(contest3_d PUBLIC -DANSWER)
